styles/style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;

}

.container{
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  background-color: #5c5b5b;
}


.calc-button-grid{
  display: grid;
  grid-template-rows: repeat(5, 1fr);
  grid-template-columns: repeat(4, 1fr);
  background-color: rgb(0, 0, 0);
  border-radius: 50%;
  aspect-ratio: 1/1.25;
}


.calculator{
  display: inline-flex;
  flex-direction: column;
  background-color: black;
  padding: 7px;
  border-radius: 5px;
  width: 30%;
  min-width: 150px;
}

.calculator-btn{
  display: flex;
  justify-content: center;
  align-items: center;
  border: none;
  border-radius: 50%;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;
  color: white;
  background-color: #333333;
  transition: opacity 0.2s ease-in-out;
  margin: 1.5px;
}


.operator{
  background-color: #f1a33c;
  color: #fff;
}

.misc {
  background-color: #a5a5a5;
  color: #000000;
}

.screen{
  color: white;
  padding: 3% 5% 2% 2%;
  background-color: #333333;
  margin-bottom: 3%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  width: 100%;
  overflow: hidden;
  min-height: 50px;
  border-radius: 5px;
}

.calculator-btn:hover{
  opacity: 0.7;
}

